--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:44:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:45:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -148,10 +148,10 @@ body {
 -3 thru 14</td>
       <td>Corey Conners -1
 -1 thru 10</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Sam Burns +2
 +2 thru 7</td>
     </tr>
@@ -180,12 +180,12 @@ E thru 4</td>
 -1 thru 4</td>
       <td>Brooks Koepka E
 E thru 4</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Patrick Cantlay E
+      <td>Patrick Cantlay E
 E thru 5</td>
-      <td class="greyout">Collin Morikawa +1
+      <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 6</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -196,10 +196,10 @@ E thru 5</td>
 -1 thru 10</td>
       <td>Viktor Hovland E
 E thru 4</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 15</td>
     </tr>
@@ -300,38 +300,6 @@ E thru 4</td>
 +2 thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-1</td>
-      <td>Dustin Johnson -1
--1 thru 6</td>
-      <td>Corey Conners -1
--1 thru 10</td>
-      <td>Xander Schauffele(W) E
-E thru 4</td>
-      <td>Russell Henley +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 15</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -1
--1 thru 10</td>
-      <td>Jon Rahm E
-E thru 5</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td>Jordan Spieth E
-E thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 15</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-1</td>
       <td>Dustin Johnson -1
@@ -362,6 +330,38 @@ E thru 5</td>
 +2 thru 15</td>
       <td class="greyout">Tyrrell Hatton +2
 +2 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">0</td>
+      <td>Dustin Johnson -1
+-1 thru 6</td>
+      <td>Corey Conners -1
+-1 thru 10</td>
+      <td>Xander Schauffele(W) +1
++1 thru 5</td>
+      <td>Russell Henley +1
++1 thru 10</td>
+      <td class="greyout leftborder">Justin Thomas +2
++2 thru 15</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -1
+-1 thru 10</td>
+      <td>Jon Rahm E
+E thru 5</td>
+      <td>Jordan Spieth E
+E thru 5</td>
+      <td>Xander Schauffele +1
++1 thru 5</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 15</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
