--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:44:48 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:45:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ E thru 4</td>
 E (F)</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 4</td>
-      <td class="greyout">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -184,8 +184,8 @@ E thru 4</td>
 E thru 5</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 4</td>
-      <td class="greyout">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -201,7 +201,7 @@ E thru 4</td>
       <td class="greyout leftborder">Sam Burns +2
 +2 thru 7</td>
       <td class="greyout">Louis Oosthuizen +3
-+3 thru 15</td>
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -230,10 +230,10 @@ E thru 4</td>
 -1 thru 10</td>
       <td>Will Zalatoris -1
 -1 thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele(W) E
+      <td class="greyout leftborder">Viktor Hovland E
 E thru 4</td>
-      <td class="greyout">Viktor Hovland E
-E thru 4</td>
+      <td class="greyout">Xander Schauffele(W) +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -260,12 +260,12 @@ E thru 4</td>
 -3 thru 14</td>
       <td>Will Zalatoris -1
 -1 thru 5</td>
-      <td>Xander Schauffele E
-E thru 4</td>
+      <td>Hideki Matsuyama E
+E thru 15</td>
       <td class="greyout leftborder">Jordan Spieth E
 E thru 5</td>
-      <td class="greyout">Hideki Matsuyama +1
-+1 thru 14</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -280,8 +280,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 4</td>
-      <td class="greyout">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -294,8 +294,8 @@ E thru 4</td>
 E thru 5</td>
       <td>Brooks Koepka E
 E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Sam Burns +2
 +2 thru 7</td>
     </tr>
@@ -308,10 +308,10 @@ E thru 4</td>
 -1 thru 10</td>
       <td>Viktor Hovland E
 E thru 4</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 15</td>
     </tr>
@@ -324,12 +324,12 @@ E thru 5</td>
 -1 thru 10</td>
       <td>Viktor Hovland E
 E thru 4</td>
-      <td>Jon Rahm E
+      <td>Hideki Matsuyama E
+E thru 15</td>
+      <td class="greyout leftborder">Jon Rahm E
 E thru 5</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td class="greyout">Shane Lowry +1
 +1 thru 17</td>
-      <td class="greyout">Hideki Matsuyama +1
-+1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -342,8 +342,8 @@ E thru 5</td>
 -1 thru 16</td>
       <td>Jon Rahm(W) E
 E thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Sam Burns +2
 +2 thru 7</td>
     </tr>
@@ -386,10 +386,10 @@ E thru 5</td>
 -6 thru 16</td>
       <td>Corey Conners -1
 -1 thru 10</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td>Hideki Matsuyama +1
-+1 thru 14</td>
+      <td>Hideki Matsuyama E
+E thru 15</td>
+      <td>Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout leftborder">Marc Leishman +2
 +2 thru 8</td>
       <td class="greyout">Justin Thomas +2
@@ -425,7 +425,7 @@ E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 17</td>
       <td class="greyout">Louis Oosthuizen +3
-+3 thru 15</td>
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -436,10 +436,10 @@ E thru 5</td>
 -1 thru 4</td>
       <td>Tiger Woods -1
 -1 thru 16</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 14</td>
+      <td>Hideki Matsuyama E
+E thru 15</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 15</td>
     </tr>
@@ -454,8 +454,8 @@ E thru 4</td>
 E thru 5</td>
       <td>Brooks Koepka E
 E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -488,8 +488,8 @@ E thru 5</td>
 E (F)</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 4</td>
-      <td class="greyout">Hideki Matsuyama +1
-+1 thru 14</td>
+      <td class="greyout">Hideki Matsuyama E
+E thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -504,8 +504,8 @@ E thru 4</td>
 -1 thru 5</td>
       <td class="greyout leftborder">Jon Rahm(W) E
 E thru 5</td>
-      <td class="greyout">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -534,10 +534,10 @@ E thru 4</td>
 -1 thru 5</td>
       <td>Jon Rahm E
 E thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
-      <td class="greyout">Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 E thru 5</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -556,22 +556,6 @@ E thru 10</td>
 E thru 5</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -6
--6 thru 16</td>
-      <td>Rory McIlroy -1
--1 thru 4</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td>Justin Thomas(W) +2
-+2 thru 15</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 7</td>
-      <td class="greyout">Justin Rose +3
-+3 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -3
@@ -582,8 +566,8 @@ E thru 4</td>
 E thru 5</td>
       <td>Viktor Hovland E
 E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -598,8 +582,8 @@ E thru 4</td>
 E thru 4</td>
       <td>Patrick Cantlay E
 E thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Adam Scott +2
 +2 thru 14</td>
     </tr>
@@ -636,6 +620,22 @@ E thru 5</td>
 +2 thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -6
+-6 thru 16</td>
+      <td>Rory McIlroy -1
+-1 thru 4</td>
+      <td>Xander Schauffele +1
++1 thru 5</td>
+      <td>Justin Thomas(W) +2
++2 thru 15</td>
+      <td class="greyout leftborder">Sam Burns +2
++2 thru 7</td>
+      <td class="greyout">Justin Rose +3
++3 thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -3
@@ -648,8 +648,8 @@ E thru 5</td>
 E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 4</td>
-      <td class="greyout">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -666,22 +666,6 @@ E thru 5</td>
 +1 thru 17</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
--3 thru 14</td>
-      <td>Will Zalatoris -1
--1 thru 5</td>
-      <td>Brooks Koepka E
-E thru 4</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 15</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -710,8 +694,8 @@ E thru 5</td>
 E thru 4</td>
       <td>Jon Rahm E
 E thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -724,10 +708,10 @@ E thru 4</td>
 E thru 5</td>
       <td>Brooks Koepka E
 E thru 4</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -742,10 +726,10 @@ E thru 5</td>
 E thru 4</td>
       <td>Brooks Koepka E
 E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
-      <td class="greyout">Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 E thru 5</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -756,10 +740,10 @@ E thru 5</td>
 -1 thru 4</td>
       <td>Will Zalatoris -1
 -1 thru 5</td>
-      <td>Xander Schauffele(W) E
+      <td>Viktor Hovland E
 E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland E
-E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +1
++1 thru 5</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 6</td>
     </tr>
@@ -794,6 +778,22 @@ E thru 4</td>
 E thru 5</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+-3 thru 14</td>
+      <td>Will Zalatoris -1
+-1 thru 5</td>
+      <td>Brooks Koepka E
+E thru 4</td>
+      <td>Xander Schauffele +1
++1 thru 5</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 15</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -852,10 +852,10 @@ E thru 5</td>
 -1 thru 4</td>
       <td>Jon Rahm(W) E
 E thru 5</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 15</td>
     </tr>
@@ -870,10 +870,10 @@ E thru 4</td>
 E thru 5</td>
       <td>Jon Rahm E
 E thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
-      <td class="greyout">Collin Morikawa +1
+      <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 6</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -934,8 +934,8 @@ E thru 5</td>
 E thru 4</td>
       <td>Jon Rahm E
 E thru 5</td>
-      <td class="greyout leftborder">Xander Schauffele E
-E thru 4</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 15</td>
     </tr>
@@ -953,7 +953,7 @@ E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 17</td>
       <td class="greyout">Louis Oosthuizen +3
-+3 thru 15</td>
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -972,22 +972,6 @@ E thru 4</td>
 E thru 5</td>
     </tr>
     <tr>
-      <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">0</td>
-      <td>Jon Rahm(W) E
-E thru 5</td>
-      <td>Viktor Hovland E
-E thru 4</td>
-      <td>Brooks Koepka E
-E thru 4</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 15</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">0</td>
       <td>Viktor Hovland E
@@ -996,28 +980,28 @@ E thru 4</td>
 E thru 4</td>
       <td>Jon Rahm E
 E thru 5</td>
-      <td>Xander Schauffele E
-E thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 E thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay E
 E thru 5</td>
-      <td>Brooks Koepka E
-E thru 4</td>
-      <td>Xander Schauffele E
-E thru 4</td>
+      <td>Hideki Matsuyama E
+E thru 15</td>
+      <td>Jon Rahm E
+E thru 5</td>
       <td>Jordan Spieth E
 E thru 5</td>
-      <td class="greyout leftborder">Collin Morikawa +1
+      <td class="greyout leftborder">Collin Morikawa(W) +1
 +1 thru 6</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1044,44 +1028,60 @@ E thru 5</td>
 E thru 5</td>
       <td>Brooks Koepka E
 E thru 4</td>
-      <td>Jordan Spieth E
+      <td>Hideki Matsuyama E
+E thru 15</td>
+      <td class="greyout leftborder">Jordan Spieth E
 E thru 5</td>
-      <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 14</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 15</td>
     </tr>
     <tr>
+      <td class="bigbold">Tony Muir</td>
+      <td class="bigbold">1</td>
+      <td>Jon Rahm(W) E
+E thru 5</td>
+      <td>Viktor Hovland E
+E thru 4</td>
+      <td>Brooks Koepka E
+E thru 4</td>
+      <td>Xander Schauffele +1
++1 thru 5</td>
+      <td class="greyout leftborder">Justin Thomas +2
++2 thru 15</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">1</td>
+      <td>Patrick Cantlay E
+E thru 5</td>
+      <td>Brooks Koepka E
+E thru 4</td>
+      <td>Jordan Spieth E
+E thru 5</td>
+      <td>Collin Morikawa +1
++1 thru 6</td>
+      <td class="greyout leftborder">Xander Schauffele +1
++1 thru 5</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 15</td>
+    </tr>
+    <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Viktor Hovland E
 E thru 4</td>
       <td>Jon Rahm E
 E thru 5</td>
-      <td>Xander Schauffele E
-E thru 4</td>
       <td>Jordan Spieth E
 E thru 5</td>
+      <td>Xander Schauffele +1
++1 thru 5</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 15</td>
       <td class="greyout">Louis Oosthuizen +3
-+3 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">1</td>
-      <td>Patrick Cantlay E
-E thru 5</td>
-      <td>Jon Rahm E
-E thru 5</td>
-      <td>Jordan Spieth E
-E thru 5</td>
-      <td>Collin Morikawa(W) +1
-+1 thru 6</td>
-      <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 14</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
++3 thru 16</td>
     </tr>
   </tbody>
 </table>
