--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:45:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:46:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -217,7 +217,7 @@ E thru 4</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 4</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -329,7 +329,7 @@ E thru 15</td>
       <td class="greyout leftborder">Jon Rahm E
 E thru 5</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -407,7 +407,7 @@ E thru 15</td>
       <td>Brooks Koepka E
 E thru 4</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -423,7 +423,7 @@ E thru 4</td>
       <td>Patrick Cantlay E
 E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 16</td>
     </tr>
@@ -519,7 +519,7 @@ E thru 4</td>
       <td>Brooks Koepka E
 E thru 4</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -550,10 +550,10 @@ E thru 5</td>
 -1 thru 4</td>
       <td>Patrick Cantlay E
 E thru 5</td>
-      <td class="greyout leftborder">Robert MacIntyre E
-E thru 10</td>
-      <td class="greyout">Jon Rahm E
+      <td class="greyout leftborder">Jon Rahm E
 E thru 5</td>
+      <td class="greyout">Robert MacIntyre +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -594,14 +594,14 @@ E thru 5</td>
 -3 thru 17</td>
       <td>Corey Conners(W) -1
 -1 thru 10</td>
-      <td>Robert MacIntyre E
-E thru 10</td>
       <td>Jon Rahm E
 E thru 5</td>
-      <td class="greyout leftborder">Jordan Spieth E
+      <td>Jordan Spieth E
 E thru 5</td>
-      <td class="greyout">Collin Morikawa +1
+      <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 6</td>
+      <td class="greyout">Robert MacIntyre +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -663,7 +663,7 @@ E thru 4</td>
       <td>Jordan Spieth E
 E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -679,7 +679,7 @@ E thru 5</td>
       <td>Tony Finau +1
 +1 thru 14</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -821,7 +821,7 @@ E thru 5</td>
       <td>Viktor Hovland E
 E thru 4</td>
       <td>Shane Lowry(W) +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Sam Burns +2
 +2 thru 7</td>
       <td class="greyout">Brian Harman +2
@@ -951,7 +951,7 @@ E thru 5</td>
       <td>Tony Finau +1
 +1 thru 14</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 16</td>
     </tr>
