--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:45:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:46:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -215,7 +215,7 @@ E thru 5</td>
       <td>Brooks Koepka E
 E thru 4</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -249,7 +249,7 @@ E thru 4</td>
       <td class="greyout leftborder">Jordan Spieth E
 E thru 5</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -262,10 +262,10 @@ E thru 5</td>
 E thru 5</td>
       <td>Jordan Spieth E
 E thru 5</td>
-      <td class="greyout leftborder">Robert MacIntyre E
-E thru 10</td>
-      <td class="greyout">Collin Morikawa +1
+      <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 6</td>
+      <td class="greyout">Robert MacIntyre +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -279,7 +279,7 @@ E thru 5</td>
       <td>Tony Finau +1
 +1 thru 14</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
     </tr>
@@ -325,7 +325,7 @@ E thru 5</td>
       <td>Patrick Cantlay E
 E thru 5</td>
       <td>Shane Lowry +1
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 15</td>
       <td class="greyout">Tyrrell Hatton +2
