--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:50:34 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:51:17 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-10</td>
       <td>Cameron Smith -6
--6 thru 16</td>
+-6 thru 17</td>
       <td>Scottie Scheffler(W) -3
 -3 thru 14</td>
       <td>Corey Conners -1
@@ -159,7 +159,7 @@ E thru 5</td>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-10</td>
       <td>Cameron Smith -6
--6 thru 16</td>
+-6 thru 17</td>
       <td>Joaquin Niemann -3
 -3 thru 16</td>
       <td>Rory McIlroy -1
@@ -175,7 +175,7 @@ E thru 5</td>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith(W) -6
--6 thru 16</td>
+-6 thru 17</td>
       <td>Rory McIlroy -1
 -1 thru 4</td>
       <td>Brooks Koepka E
@@ -191,7 +191,7 @@ E thru 6</td>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith(W) -6
--6 thru 16</td>
+-6 thru 17</td>
       <td>Corey Conners -1
 -1 thru 10</td>
       <td>Viktor Hovland E
@@ -207,11 +207,11 @@ E thru 5</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -6
--6 thru 16</td>
+-6 thru 17</td>
       <td>Matthew Fitzpatrick -1
 -1 thru 4</td>
       <td>Will Zalatoris -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Brooks Koepka E
 E thru 4</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -241,31 +241,15 @@ E thru 6</td>
       <td>Scottie Scheffler(W) -3
 -3 thru 14</td>
       <td>Will Zalatoris -1
--1 thru 5</td>
-      <td>Jon Rahm E
-E thru 5</td>
+-1 thru 6</td>
       <td>Brooks Koepka E
 E thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 5</td>
-      <td class="greyout">Shane Lowry +1
-+1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-4</td>
-      <td>Daniel Berger -3
--3 thru 17</td>
-      <td>Corey Conners(W) -1
--1 thru 10</td>
-      <td>Jon Rahm E
-E thru 5</td>
       <td>Jordan Spieth E
 E thru 5</td>
-      <td class="greyout leftborder">Collin Morikawa +1
+      <td class="greyout leftborder">Jon Rahm +1
 +1 thru 6</td>
-      <td class="greyout">Robert MacIntyre +2
-+2 thru 11</td>
+      <td class="greyout">Shane Lowry +1
++1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -273,7 +257,7 @@ E thru 5</td>
       <td>Scottie Scheffler -3
 -3 thru 14</td>
       <td>Will Zalatoris -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Patrick Cantlay E
 E thru 6</td>
       <td>Tony Finau +1
@@ -289,7 +273,7 @@ E thru 6</td>
       <td>Daniel Berger -3
 -3 thru 17</td>
       <td>Will Zalatoris -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Brooks Koepka E
 E thru 4</td>
       <td>Collin Morikawa +1
@@ -298,6 +282,22 @@ E thru 4</td>
 +1 thru 14</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-3</td>
+      <td>Daniel Berger -3
+-3 thru 17</td>
+      <td>Corey Conners(W) -1
+-1 thru 10</td>
+      <td>Jordan Spieth E
+E thru 5</td>
+      <td>Collin Morikawa +1
++1 thru 6</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 6</td>
+      <td class="greyout">Robert MacIntyre +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -312,24 +312,8 @@ E thru 6</td>
 E thru 5</td>
       <td class="greyout leftborder">Brooks Koepka E
 E thru 4</td>
-      <td class="greyout">Jon Rahm E
-E thru 5</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners -1
--1 thru 10</td>
-      <td>Jon Rahm E
-E thru 5</td>
-      <td>Patrick Cantlay E
-E thru 6</td>
-      <td>Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 15</td>
-      <td class="greyout">Tyrrell Hatton +2
-+2 thru 7</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -348,14 +332,30 @@ E thru 6</td>
 +3 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners -1
 -1 thru 10</td>
-      <td>Jon Rahm E
-E thru 5</td>
+      <td>Patrick Cantlay E
+E thru 6</td>
+      <td>Jon Rahm +1
++1 thru 6</td>
+      <td>Shane Lowry +1
++1 (F)</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 15</td>
+      <td class="greyout">Tyrrell Hatton +2
++2 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -1
+-1 thru 10</td>
       <td>Jordan Spieth E
 E thru 5</td>
+      <td>Jon Rahm +1
++1 thru 6</td>
       <td>Xander Schauffele +1
 +1 thru 5</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
@@ -365,15 +365,15 @@ E thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Jon Rahm(W) E
-E thru 5</td>
+      <td class="bigbold">1</td>
       <td>Jordan Spieth E
 E thru 5</td>
       <td>Patrick Cantlay E
 E thru 6</td>
       <td>Brooks Koepka E
 E thru 4</td>
+      <td>Jon Rahm(W) +1
++1 thru 6</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 6</td>
       <td class="greyout">Tony Finau +1
@@ -381,13 +381,13 @@ E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Viktor Hovland(W) E
-E thru 5</td>
-      <td>Jon Rahm E
 E thru 5</td>
       <td>Brooks Koepka E
 E thru 4</td>
+      <td>Jon Rahm +1
++1 thru 6</td>
       <td>Collin Morikawa +1
 +1 thru 6</td>
       <td class="greyout leftborder">Patrick Reed +2
