--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:57:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:57:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -198,8 +198,8 @@ E thru 5</td>
 E thru 6</td>
       <td>Brooks Koepka E
 E thru 5</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 7</td>
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 8</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 16</td>
     </tr>
@@ -246,8 +246,8 @@ E thru 5</td>
 -1 thru 10</td>
       <td>Viktor Hovland(W) E
 E thru 5</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 7</td>
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 8</td>
       <td class="greyout">Tyrrell Hatton +2
 +2 thru 7</td>
     </tr>
@@ -275,7 +275,7 @@ E thru 5</td>
       <td>Scottie Scheffler(W) -3
 -3 thru 14</td>
       <td>Billy Horschel -1
--1 thru 6</td>
+-1 thru 7</td>
       <td>Patrick Cantlay E
 E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka E
@@ -374,10 +374,10 @@ E thru 5</td>
 E thru 5</td>
       <td>Jon Rahm(W) +1
 +1 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 8</td>
+      <td class="greyout">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -438,10 +438,10 @@ E thru 16</td>
 -1 thru 16</td>
       <td>Jon Rahm(W) +1
 +1 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 8</td>
+      <td class="greyout">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -572,6 +572,22 @@ E thru 6</td>
 +2 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -6
+-6 thru 17</td>
+      <td>Rory McIlroy -1
+-1 thru 5</td>
+      <td>Sam Burns +1
++1 thru 8</td>
+      <td>Xander Schauffele +1
++1 thru 5</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 15</td>
+      <td class="greyout">Justin Rose +4
++4 thru 11</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -3
@@ -598,26 +614,10 @@ E thru 5</td>
 E thru 6</td>
       <td>Viktor Hovland E
 E thru 5</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 8</td>
+      <td class="greyout">Jon Rahm +1
 +1 thru 6</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -6
--6 thru 17</td>
-      <td>Rory McIlroy -1
--1 thru 5</td>
-      <td>Xander Schauffele +1
-+1 thru 5</td>
-      <td>Justin Thomas(W) +2
-+2 thru 15</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 7</td>
-      <td class="greyout">Justin Rose +4
-+4 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -806,10 +806,10 @@ E thru 5</td>
 E thru 6</td>
       <td>Brooks Koepka E
 E thru 5</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 8</td>
+      <td class="greyout">Jon Rahm +1
 +1 thru 6</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -822,8 +822,8 @@ E thru 5</td>
 E thru 5</td>
       <td>Shane Lowry(W) +1
 +1 (F)</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 7</td>
+      <td class="greyout leftborder">Sam Burns +1
++1 thru 8</td>
       <td class="greyout">Brian Harman +2
 +2 (F)</td>
     </tr>
@@ -948,12 +948,12 @@ E thru 6</td>
 E thru 5</td>
       <td>Jordan Spieth E
 E thru 5</td>
-      <td>Jon Rahm +1
+      <td>Sam Burns +1
++1 thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +1
 +1 thru 6</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
+      <td class="greyout">Justin Thomas(W) +2
 +2 thru 15</td>
-      <td class="greyout">Sam Burns +2
-+2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
