--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:57:47 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:58:30 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -296,8 +296,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -392,8 +392,8 @@ E thru 16</td>
 +1 thru 5</td>
       <td class="greyout leftborder">Marc Leishman +2
 +2 thru 9</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -408,8 +408,8 @@ E thru 16</td>
 E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -424,8 +424,8 @@ E thru 5</td>
 E thru 16</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -456,8 +456,8 @@ E thru 6</td>
 E thru 5</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -520,8 +520,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -582,8 +582,8 @@ E thru 6</td>
 +1 thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas(W) +3
++3 thru 16</td>
       <td class="greyout">Justin Rose +4
 +4 thru 11</td>
     </tr>
@@ -600,8 +600,8 @@ E thru 6</td>
 E thru 5</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -648,8 +648,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -680,8 +680,8 @@ E thru 6</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -696,8 +696,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -760,8 +760,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -776,8 +776,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 6</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -790,8 +790,8 @@ E thru 5</td>
 E thru 5</td>
       <td>Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas(W) +3
++3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 16</td>
     </tr>
@@ -840,8 +840,8 @@ E thru 5</td>
 +1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -886,8 +886,8 @@ E thru 5</td>
 E thru 5</td>
       <td>Collin Morikawa(W) +1
 +1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas +3
++3 thru 16</td>
       <td class="greyout">Gary Woodland +3
 +3 thru 11</td>
     </tr>
@@ -904,8 +904,8 @@ E thru 5</td>
 +1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -920,8 +920,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 6</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -952,8 +952,8 @@ E thru 5</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 6</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -968,8 +968,8 @@ E thru 16</td>
 E thru 5</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 6</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -984,8 +984,8 @@ E thru 5</td>
 +1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
@@ -1000,8 +1000,8 @@ E thru 5</td>
 +1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -1032,8 +1032,8 @@ E thru 5</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1062,9 +1062,9 @@ E thru 5</td>
 +1 thru 6</td>
       <td>Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 15</td>
-      <td class="greyout">Louis Oosthuizen +3
+      <td class="greyout leftborder">Louis Oosthuizen +3
++3 thru 16</td>
+      <td class="greyout">Justin Thomas +3
 +3 thru 16</td>
     </tr>
     <tr>
@@ -1078,8 +1078,8 @@ E thru 5</td>
 +1 thru 6</td>
       <td>Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas(W) +3
++3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 16</td>
     </tr>
