--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:57:47 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:58:30 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +2
 +2 thru 17</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -200,8 +200,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -216,8 +216,8 @@ E thru 5</td>
 E thru 5</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -232,8 +232,8 @@ E thru 5</td>
 E thru 6</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -264,8 +264,8 @@ E thru 6</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -280,8 +280,8 @@ E thru 5</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Tony Finau +1
 +1 thru 14</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -326,8 +326,8 @@ E thru 5</td>
 +1 thru 5</td>
       <td>Russell Henley +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas +3
++3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 16</td>
     </tr>
@@ -342,10 +342,10 @@ E thru 6</td>
 +1 thru 6</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 15</td>
-      <td class="greyout">Tyrrell Hatton +2
+      <td class="greyout leftborder">Tyrrell Hatton +2
 +2 thru 7</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -358,8 +358,8 @@ E thru 5</td>
 +1 thru 6</td>
       <td>Xander Schauffele +1
 +1 thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 15</td>
+      <td class="greyout leftborder">Justin Thomas(W) +3
++3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 16</td>
     </tr>
