--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:58:30 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:59:13 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -340,10 +340,10 @@ E thru 5</td>
 E thru 6</td>
       <td>Jon Rahm +1
 +1 thru 6</td>
-      <td>Shane Lowry +1
+      <td>Tyrrell Hatton +1
++1 thru 8</td>
+      <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Tyrrell Hatton +2
-+2 thru 7</td>
       <td class="greyout">Justin Thomas(W) +3
 +3 thru 16</td>
     </tr>
