--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:59:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:00:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ body {
       <td>Corey Conners -1
 -1 thru 10</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
       <td class="greyout">Sam Burns +1
@@ -197,7 +197,7 @@ E thru 6</td>
       <td>Viktor Hovland E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
       <td class="greyout">Justin Thomas +3
@@ -236,6 +236,22 @@ E thru 6</td>
 +3 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -3
+-3 thru 14</td>
+      <td>Will Zalatoris -1
+-1 thru 6</td>
+      <td>Patrick Cantlay E
+E thru 6</td>
+      <td>Tony Finau E
+E thru 15</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler(W) -3
@@ -245,41 +261,25 @@ E thru 6</td>
       <td>Brooks Koepka E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 6</td>
       <td class="greyout">Shane Lowry +1
 +1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
--3 thru 14</td>
-      <td>Will Zalatoris -1
--1 thru 6</td>
-      <td>Patrick Cantlay E
-E thru 6</td>
-      <td>Tony Finau +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Daniel Berger -3
 -3 thru 17</td>
       <td>Will Zalatoris -1
 -1 thru 6</td>
       <td>Brooks Koepka E
 E thru 5</td>
-      <td>Collin Morikawa +1
+      <td>Tony Finau E
+E thru 15</td>
+      <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 7</td>
-      <td class="greyout leftborder">Tony Finau +1
-+1 thru 14</td>
       <td class="greyout">Justin Thomas(W) +3
 +3 thru 16</td>
     </tr>
@@ -291,7 +291,7 @@ E thru 5</td>
       <td>Corey Conners(W) -1
 -1 thru 10</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Collin Morikawa +1
 +1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +1
@@ -305,7 +305,7 @@ E thru 5</td>
       <td>Dustin Johnson -2
 -2 thru 7</td>
       <td>Jordan Spieth(W) E
-E thru 5</td>
+E thru 6</td>
       <td>Patrick Cantlay E
 E thru 6</td>
       <td>Viktor Hovland E
@@ -332,6 +332,22 @@ E thru 5</td>
 +3 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">0</td>
+      <td>Jordan Spieth E
+E thru 6</td>
+      <td>Patrick Cantlay E
+E thru 6</td>
+      <td>Brooks Koepka E
+E thru 5</td>
+      <td>Tony Finau E
+E thru 15</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
++1 thru 6</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">1</td>
       <td>Corey Conners -1
@@ -353,7 +369,7 @@ E thru 6</td>
       <td>Corey Conners -1
 -1 thru 10</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Jon Rahm +1
 +1 thru 6</td>
       <td>Xander Schauffele +1
@@ -362,22 +378,6 @@ E thru 5</td>
 +3 thru 16</td>
       <td class="greyout">Louis Oosthuizen +3
 +3 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">1</td>
-      <td>Jordan Spieth E
-E thru 5</td>
-      <td>Patrick Cantlay E
-E thru 6</td>
-      <td>Brooks Koepka E
-E thru 5</td>
-      <td>Jon Rahm(W) +1
-+1 thru 6</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 7</td>
-      <td class="greyout">Tony Finau +1
-+1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
