--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:59:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:00:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -263,7 +263,7 @@ E thru 5</td>
       <td>Hideki Matsuyama E
 E thru 16</td>
       <td class="greyout leftborder">Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 5</td>
     </tr>
@@ -293,7 +293,7 @@ E thru 5</td>
       <td>Viktor Hovland E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
       <td class="greyout">Justin Thomas +3
@@ -359,7 +359,7 @@ E thru 5</td>
       <td>Brooks Koepka E
 E thru 5</td>
       <td class="greyout leftborder">Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout">Jon Rahm +1
 +1 thru 6</td>
     </tr>
@@ -419,7 +419,7 @@ E thru 5</td>
       <td>Rory McIlroy(W) -1
 -1 thru 5</td>
       <td>Tiger Woods -1
--1 thru 16</td>
+-1 thru 17</td>
       <td>Hideki Matsuyama E
 E thru 16</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -435,7 +435,7 @@ E thru 16</td>
       <td>Corey Conners -1
 -1 thru 10</td>
       <td>Tiger Woods -1
--1 thru 16</td>
+-1 thru 17</td>
       <td>Jon Rahm(W) +1
 +1 thru 6</td>
       <td class="greyout leftborder">Sam Burns +1
@@ -469,7 +469,7 @@ E thru 5</td>
       <td>Viktor Hovland E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 6</td>
       <td class="greyout">Bubba Watson +1
@@ -537,7 +537,7 @@ E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
       <td class="greyout">Adam Scott +2
-+2 thru 14</td>
++2 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -549,7 +549,7 @@ E thru 6</td>
       <td>Will Zalatoris -1
 -1 thru 6</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 6</td>
       <td class="greyout">Xander Schauffele +1
@@ -604,6 +604,22 @@ E thru 5</td>
 +3 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -3
+-3 thru 14</td>
+      <td>Will Zalatoris -1
+-1 thru 6</td>
+      <td>Patrick Cantlay E
+E thru 6</td>
+      <td>Tony Finau E
+E thru 15</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Justin Thomas(W) +3
++3 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -3
@@ -645,7 +661,7 @@ E thru 5</td>
       <td>Brooks Koepka E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +3
@@ -663,25 +679,9 @@ E thru 6</td>
       <td>Viktor Hovland E
 E thru 5</td>
       <td class="greyout leftborder">Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout">Jon Rahm +1
 +1 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
--3 thru 14</td>
-      <td>Will Zalatoris -1
--1 thru 6</td>
-      <td>Patrick Cantlay E
-E thru 6</td>
-      <td>Tony Finau +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -693,7 +693,7 @@ E thru 6</td>
       <td>Brooks Koepka E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 5</td>
       <td class="greyout">Justin Thomas(W) +3
@@ -707,7 +707,7 @@ E thru 5</td>
       <td>Corey Conners(W) -1
 -1 thru 10</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Collin Morikawa +1
 +1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +1
@@ -725,7 +725,7 @@ E thru 5</td>
       <td>Brooks Koepka E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 6</td>
       <td class="greyout">Xander Schauffele +1
@@ -751,7 +751,7 @@ E thru 5</td>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-3</td>
       <td>Tiger Woods(W) -1
--1 thru 16</td>
+-1 thru 17</td>
       <td>Rory McIlroy -1
 -1 thru 5</td>
       <td>Will Zalatoris -1
@@ -780,6 +780,22 @@ E thru 5</td>
 +3 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson(W) -2
+-2 thru 7</td>
+      <td>Matthew Fitzpatrick -1
+-1 thru 5</td>
+      <td>Tony Finau E
+E thru 15</td>
+      <td>Jordan Spieth E
+E thru 6</td>
+      <td class="greyout leftborder">Shane Lowry +1
++1 (F)</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -3
@@ -801,7 +817,7 @@ E thru 5</td>
       <td>Scottie Scheffler -3
 -3 thru 14</td>
       <td>Jordan Spieth(W) E
-E thru 5</td>
+E thru 6</td>
       <td>Patrick Cantlay E
 E thru 6</td>
       <td>Brooks Koepka E
@@ -844,28 +860,12 @@ E thru 5</td>
 +3 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson(W) -2
--2 thru 7</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 5</td>
-      <td>Jordan Spieth E
-E thru 5</td>
-      <td>Tony Finau +1
-+1 thru 14</td>
-      <td class="greyout leftborder">Shane Lowry +1
-+1 (F)</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-2</td>
       <td>Dustin Johnson -2
 -2 thru 7</td>
       <td>Jordan Spieth(W) E
-E thru 5</td>
+E thru 6</td>
       <td>Patrick Cantlay E
 E thru 6</td>
       <td>Viktor Hovland E
@@ -881,7 +881,7 @@ E thru 5</td>
       <td>Rory McIlroy -1
 -1 thru 5</td>
       <td>Tiger Woods -1
--1 thru 16</td>
+-1 thru 17</td>
       <td>Viktor Hovland E
 E thru 5</td>
       <td>Collin Morikawa(W) +1
@@ -899,7 +899,7 @@ E thru 5</td>
       <td>Rory McIlroy -1
 -1 thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Jon Rahm(W) +1
 +1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -917,7 +917,7 @@ E thru 5</td>
       <td>Brooks Koepka E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 6</td>
       <td class="greyout">Justin Thomas +3
@@ -947,7 +947,7 @@ E thru 6</td>
       <td>Viktor Hovland E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Sam Burns +1
 +1 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +1
@@ -965,7 +965,7 @@ E thru 5</td>
       <td>Hideki Matsuyama E
 E thru 16</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 +1 thru 6</td>
       <td class="greyout">Justin Thomas +3
@@ -995,7 +995,7 @@ E thru 5</td>
       <td>Brooks Koepka E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Jon Rahm +1
 +1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -1011,7 +1011,7 @@ E thru 6</td>
       <td>Hideki Matsuyama E
 E thru 16</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Collin Morikawa(W) +1
 +1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +1
@@ -1027,7 +1027,7 @@ E thru 6</td>
       <td>Brooks Koepka E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Collin Morikawa +1
 +1 thru 7</td>
       <td class="greyout leftborder">Xander Schauffele +1
@@ -1043,7 +1043,7 @@ E thru 5</td>
       <td>Brooks Koepka E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Collin Morikawa +1
 +1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +1
@@ -1073,7 +1073,7 @@ E thru 5</td>
       <td>Viktor Hovland E
 E thru 5</td>
       <td>Jordan Spieth E
-E thru 5</td>
+E thru 6</td>
       <td>Jon Rahm +1
 +1 thru 6</td>
       <td>Xander Schauffele +1
