--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:24:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:25:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -264,8 +264,8 @@ E thru 6</td>
 +1 thru 9</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 7</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 17</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -424,8 +424,8 @@ E thru 6</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 17</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -648,8 +648,8 @@ E thru 6</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Justin Thomas(W) +3
 +3 thru 17</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 17</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -776,8 +776,8 @@ E thru 16</td>
 +1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 17</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -966,10 +966,10 @@ E thru 6</td>
 +1 thru 7</td>
       <td>Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout leftborder">Louis Oosthuizen +3
+      <td class="greyout leftborder">Justin Thomas +3
 +3 thru 17</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
@@ -1080,8 +1080,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Justin Thomas(W) +3
 +3 thru 17</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 17</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
   </tbody>
 </table>
