--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:30:46 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:31:29 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,22 +220,6 @@ E thru 7</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler(W) -4
--4 thru 17</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Billy Horschel -1
--1 thru 8</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith(W) -4
@@ -282,6 +266,22 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout">Shane Lowry +1
 +1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler(W) -4
+-4 thru 17</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Billy Horschel E
+E thru 9</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 8</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
