--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:31:29 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:32:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -664,8 +664,8 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout leftborder">Xander Schauffele(W) +1
 +1 thru 7</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 8</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -678,8 +678,8 @@ E thru 7</td>
 E thru 7</td>
       <td>Rory McIlroy E
 E thru 7</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 8</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 9</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 17</td>
     </tr>
@@ -868,12 +868,12 @@ E thru 7</td>
 E thru 7</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
-      <td>Collin Morikawa +1
+      <td>Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 8</td>
-      <td class="greyout">Xander Schauffele +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 7</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -898,30 +898,14 @@ E thru 7</td>
 -1 thru 12</td>
       <td>Daniel Berger -1
 -1 (F)</td>
-      <td>Collin Morikawa +1
-+1 thru 8</td>
       <td>Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Robert MacIntyre +2
+      <td class="greyout leftborder">Robert MacIntyre +2
 +2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">0</td>
-      <td>Tiger Woods -1
--1 (F)</td>
-      <td>Viktor Hovland E
-E thru 7</td>
-      <td>Rory McIlroy E
-E thru 7</td>
-      <td>Collin Morikawa(W) +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Justin Thomas +3
-+3 thru 17</td>
-      <td class="greyout">Gary Woodland +3
-+3 thru 12</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -938,6 +922,22 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout">Justin Thomas(W) +3
 +3 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">1</td>
+      <td>Tiger Woods -1
+-1 (F)</td>
+      <td>Viktor Hovland E
+E thru 7</td>
+      <td>Rory McIlroy E
+E thru 7</td>
+      <td>Collin Morikawa(W) +2
++2 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas +3
++3 thru 17</td>
+      <td class="greyout">Gary Woodland +3
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -994,12 +994,12 @@ E thru 7</td>
 E thru 7</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Collin Morikawa +1
-+1 thru 8</td>
       <td>Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 7</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 9</td>
       <td class="greyout">Patrick Reed +3
 +3 thru 11</td>
     </tr>
@@ -1040,14 +1040,14 @@ E thru 7</td>
       <td class="bigbold">3</td>
       <td>Hideki Matsuyama E
 E thru 17</td>
-      <td>Collin Morikawa(W) +1
-+1 thru 8</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td>Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 7</td>
+      <td class="greyout leftborder">Collin Morikawa(W) +2
++2 thru 9</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
@@ -1058,12 +1058,12 @@ Out With Injury</td>
 E thru 7</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
-      <td>Collin Morikawa +1
-+1 thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 7</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 9</td>
       <td class="greyout">Justin Thomas(W) +3
 +3 thru 17</td>
     </tr>
