--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:31:29 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:32:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -230,8 +230,8 @@ E thru 7</td>
 -1 (F)</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-+1 thru 8</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 9</td>
       <td class="greyout">Justin Thomas(W) +3
 +3 thru 17</td>
     </tr>
@@ -260,12 +260,12 @@ E thru 7</td>
 E thru 7</td>
       <td>Rory McIlroy E
 E thru 7</td>
-      <td>Collin Morikawa +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele +1
+      <td>Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout">Patrick Cantlay +1
+      <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 8</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -276,10 +276,10 @@ E thru 7</td>
 E thru 7</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Collin Morikawa +1
+      <td>Patrick Cantlay +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 8</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 9</td>
       <td class="greyout">Justin Thomas +3
 +3 thru 17</td>
     </tr>
@@ -322,12 +322,12 @@ E thru 7</td>
 -1 thru 12</td>
       <td>Daniel Berger -1
 -1 (F)</td>
-      <td>Collin Morikawa +1
-+1 thru 8</td>
       <td>Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 7</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 9</td>
       <td class="greyout">Robert MacIntyre +2
 +2 thru 13</td>
     </tr>
@@ -340,12 +340,12 @@ E thru 7</td>
 E thru 7</td>
       <td>Jon Rahm(W) +1
 +1 thru 8</td>
-      <td>Collin Morikawa +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Patrick Cantlay +1
+      <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 8</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -364,22 +364,6 @@ E thru 7</td>
 +3 thru 17</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
-      <td>Viktor Hovland(W) E
-E thru 7</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
-      <td>Collin Morikawa +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Patrick Reed +3
-+3 thru 11</td>
-      <td class="greyout">Luke List +5
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">2</td>
       <td>Corey Conners -1
@@ -394,6 +378,22 @@ E thru 7</td>
 +3 thru 17</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">3</td>
+      <td>Viktor Hovland(W) E
+E thru 7</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Jon Rahm +1
++1 thru 8</td>
+      <td>Collin Morikawa +2
++2 thru 9</td>
+      <td class="greyout leftborder">Patrick Reed +3
++3 thru 11</td>
+      <td class="greyout">Luke List +5
++5 (F)</td>
     </tr>
   </tbody>
 </table>
