--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:44:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:45:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -236,22 +236,6 @@ E thru 7</td>
 +1 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -4
--4 thru 17</td>
-      <td>Will Zalatoris -2
--2 thru 9</td>
-      <td>Corey Conners -1
--1 thru 12</td>
-      <td>Webb Simpson -1
--1 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm(W) E
-E thru 9</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 8</td>
-    </tr>
-    <tr>
       <td class="bigbold">BCREAMED</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -4
@@ -346,6 +330,22 @@ E thru 9</td>
 +1 thru 8</td>
       <td class="greyout">Adam Scott +1
 +1 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -4
+-4 thru 17</td>
+      <td>Will Zalatoris -2
+-2 thru 9</td>
+      <td>Corey Conners -1
+-1 thru 12</td>
+      <td>Jon Rahm(W) E
+E thru 9</td>
+      <td class="greyout leftborder">Webb Simpson E
+E thru 11</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
