--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:54:26 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:55:09 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -284,6 +284,22 @@ E thru 9</td>
 +2 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -3
+-3 (F)</td>
+      <td>Corey Conners -2
+-2 thru 13</td>
+      <td>Will Zalatoris -2
+-2 thru 9</td>
+      <td>Webb Simpson -1
+-1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm(W) E
+E thru 9</td>
+      <td class="greyout">Xander Schauffele +1
++1 thru 8</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-8</td>
       <td>Cameron Smith -4
@@ -394,22 +410,6 @@ E thru 9</td>
 +1 thru 8</td>
       <td class="greyout">Sam Burns +2
 +2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -3
--3 (F)</td>
-      <td>Corey Conners -2
--2 thru 13</td>
-      <td>Will Zalatoris -2
--2 thru 9</td>
-      <td>Jon Rahm(W) E
-E thru 9</td>
-      <td class="greyout leftborder">Webb Simpson E
-E thru 11</td>
-      <td class="greyout">Xander Schauffele +1
-+1 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -1014,10 +1014,10 @@ E thru 8</td>
 E thru 9</td>
       <td>Collin Morikawa +2
 +2 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 13</td>
+      <td class="greyout">Jordan Spieth +2
 +2 thru 8</td>
-      <td class="greyout">Patrick Reed +3
-+3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
