--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:56:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:57:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ body {
 -2 thru 13</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Sam Burns +2
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout">Sam Burns +2
 +2 thru 10</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -214,10 +214,10 @@ E thru 9</td>
 -1 thru 8</td>
       <td>Jon Rahm E
 E thru 9</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -264,8 +264,8 @@ E thru 9</td>
 E thru 9</td>
       <td class="greyout leftborder">Jon Rahm E
 E thru 9</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 8</td>
+      <td class="greyout">Jordan Spieth(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -278,8 +278,8 @@ E thru 9</td>
 E thru 9</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -326,10 +326,10 @@ E thru 9</td>
 E thru 9</td>
       <td>Patrick Cantlay E
 E thru 9</td>
-      <td class="greyout leftborder">Collin Morikawa +2
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout">Collin Morikawa +2
 +2 thru 10</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -340,12 +340,12 @@ E thru 9</td>
 -1 (F)</td>
       <td>Jon Rahm E
 E thru 9</td>
-      <td>Robert MacIntyre +1
+      <td>Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout leftborder">Robert MacIntyre +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Collin Morikawa +2
+      <td class="greyout">Collin Morikawa +2
 +2 thru 10</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -364,6 +364,22 @@ E thru 9</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -2
+-2 thru 13</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td>Xander Schauffele +1
++1 thru 8</td>
+      <td>Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">1</td>
       <td>Brooks Koepka -1
@@ -378,22 +394,6 @@ E thru 9</td>
 +2 thru 13</td>
       <td class="greyout">Luke List +5
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -2
--2 thru 13</td>
-      <td>Jon Rahm E
-E thru 9</td>
-      <td>Xander Schauffele +1
-+1 thru 8</td>
-      <td>Jordan Spieth +2
-+2 thru 8</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
     </tr>
   </tbody>
 </table>
