--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:56:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:57:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -216,8 +216,8 @@ E thru 9</td>
 -1 thru 8</td>
       <td class="greyout leftborder">Jon Rahm E
 E thru 9</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -248,8 +248,8 @@ E thru 9</td>
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -424,8 +424,8 @@ E thru 9</td>
 E thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -518,8 +518,8 @@ E thru 9</td>
 E thru 9</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -582,8 +582,8 @@ E thru 9</td>
 -1 thru 8</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -598,8 +598,8 @@ E thru 9</td>
 -1 thru 8</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -632,8 +632,8 @@ E thru 9</td>
 E thru 9</td>
       <td class="greyout leftborder">Jon Rahm E
 E thru 9</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 8</td>
+      <td class="greyout">Jordan Spieth(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -680,8 +680,8 @@ E thru 9</td>
 E thru 9</td>
       <td class="greyout leftborder">Jon Rahm E
 E thru 9</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -696,8 +696,8 @@ E thru 9</td>
 E thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout">Jordan Spieth +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -726,8 +726,8 @@ E thru 9</td>
 E thru 9</td>
       <td>Rory McIlroy E
 E thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Bubba Watson +2
 +2 thru 12</td>
     </tr>
@@ -758,8 +758,8 @@ E thru 8</td>
 E thru 9</td>
       <td>Jon Rahm E
 E thru 9</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +1
++1 thru 9</td>
       <td class="greyout">Sam Burns +2
 +2 thru 10</td>
     </tr>
@@ -806,8 +806,8 @@ E thru 8</td>
 E thru 9</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -838,8 +838,8 @@ E thru 8</td>
 E thru 9</td>
       <td>Viktor Hovland E
 E thru 9</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -870,10 +870,10 @@ E thru 9</td>
 E thru 9</td>
       <td>Robert MacIntyre +1
 +1 thru 15</td>
-      <td class="greyout leftborder">Collin Morikawa +2
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout">Collin Morikawa +2
 +2 thru 10</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -892,6 +892,22 @@ E thru 9</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">-1</td>
+      <td>Will Zalatoris -2
+-2 thru 9</td>
+      <td>Viktor Hovland E
+E thru 9</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td>Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout leftborder">Sam Burns +2
++2 thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">-1</td>
       <td>Brooks Koepka -1
@@ -902,8 +918,8 @@ E thru 9</td>
 E thru 9</td>
       <td>Hideki Matsuyama E
 E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -918,8 +934,8 @@ E thru 9</td>
 E thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -982,42 +998,58 @@ E thru 9</td>
 E thru 9</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">0</td>
-      <td>Will Zalatoris -2
--2 thru 9</td>
-      <td>Viktor Hovland E
-E thru 9</td>
-      <td>Jon Rahm E
-E thru 9</td>
-      <td>Sam Burns +2
-+2 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Brooks Koepka -1
 -1 thru 8</td>
       <td>Viktor Hovland(W) E
 E thru 9</td>
       <td>Jon Rahm E
 E thru 9</td>
-      <td>Collin Morikawa +2
+      <td>Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 10</td>
-      <td class="greyout leftborder">Patrick Reed +2
+      <td class="greyout">Patrick Reed +2
 +2 thru 13</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">1</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Hideki Matsuyama E
+E (F)</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td>Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout leftborder">Collin Morikawa(W) +2
++2 thru 10</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">1</td>
+      <td>Brooks Koepka -1
+-1 thru 8</td>
+      <td>Patrick Cantlay E
+E thru 9</td>
+      <td>Xander Schauffele +1
++1 thru 8</td>
+      <td>Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -1036,48 +1068,16 @@ E thru 8</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">2</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
-      <td>Hideki Matsuyama E
-E (F)</td>
-      <td>Jon Rahm E
-E thru 9</td>
-      <td>Collin Morikawa(W) +2
-+2 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
-    </tr>
-    <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">2</td>
-      <td>Brooks Koepka -1
--1 thru 8</td>
-      <td>Patrick Cantlay E
-E thru 9</td>
-      <td>Xander Schauffele +1
-+1 thru 8</td>
-      <td>Collin Morikawa +2
-+2 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 8</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Viktor Hovland E
 E thru 9</td>
       <td>Jon Rahm E
 E thru 9</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td>Jordan Spieth +2
-+2 thru 8</td>
+      <td>Jordan Spieth +1
++1 thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
