--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:06:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:07:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -300,6 +300,22 @@ E thru 9</td>
 +2 thru 10</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners(W) -2
+-2 thru 13</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Jon Rahm E
+E thru 10</td>
+      <td>Robert MacIntyre E
+E thru 16</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout">Collin Morikawa +2
++2 thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-2</td>
       <td>Sungjae Im -2
@@ -314,22 +330,6 @@ E thru 9</td>
 +2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners(W) -2
--2 thru 13</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Jon Rahm E
-E thru 10</td>
-      <td>Jordan Spieth +1
-+1 thru 9</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
-+1 thru 15</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
